@@ -19,8 +19,8 @@ readme_from 'Example.pm';
 recursive_author_tests('xt');
 requires 'Error::Pure' => 0.08;
 requires 'Exporter' => 0;
-requires 'Module::Info' => 0;
 requires 'Pod::Abstract' => 0;
+requires 'Pod::Find' => 0;
 requires 'Readonly' => 0;
 requires 'perl' => '5.6.2';
 resources 'bugtracker' => 'https://rt.cpan.org/Public/Dist/Display.html'.
